--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://{MONGO_USERNAME}:{MONGO_PASSWORD}@{MONGO_CLUSTER_NAME}.eefie.mongodb.net/?retryWrites=true&w=majority&appName=bank-clustor"
+MONGO_URI="mongodb+srv://{MONGO_USERNAME}:{MONGO_PASSWORD}@{MONGO_CLUSTER_NAME}.eefie.mongodb.net/?retryWrites=true&w=majority&appName=<MONGO_CLUSTER_NAME>"
 MONGO_USERNAME="your_username"
 MONGO_PASSWORD="your_password"
 MONGO_CLUSTER_NAME="your_cluster_name"
